--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white ">
         <a class="navbar-brand" href="#"><img src="./" alt=""><img src="./icons/Liquor Website assets/Group 43633.svg" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon">hvbvjg</span>
+          <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-evenly" id="navbarText">
             <ul class="navbar-nav mr-auto">
@@ -84,18 +84,18 @@
 
 
     <div class="col-12 bannner-section">
+        <div class="container">
+            <div class="row">
 
-        <div class="row">
-            <div class="container"></div>
-            <div class="container my-5 py-5">
-                <h6 class="banner__header ">Shop Alcohol</h6>
-                <h6 class="banner__offer">40% Off</h6>
-                <button type="button" class="btn btn-warning px-0 py-1 py-md-1 px-md-3 px-lg-5 py-md-3">Order Now</button>
+                <div class="container my-5 py-5">
+                    <h6 class="banner__header ">Shop Alcohol</h6>
+                    <h6 class="banner__offer">40% Off</h6>
+                    <button type="button" class="btn btn-warning px-0 py-1 py-md-1 px-md-3 px-lg-5 py-md-3">Order Now</button>
+                </div>
+                <!-- <img src="./icons/Liquor Website assets/Group 50784.png" alt="" class="banner-class"> -->
             </div>
-            <!-- <img src="./icons/Liquor Website assets/Group 50784.png" alt="" class="banner-class"> -->
         </div>
     </div>
-
     <div class="col-12">
 
         <!-- ---------------category--------------------- -->
@@ -182,9 +182,9 @@
 
             <div class="row justify-content-center ">
                 <div class="col-12 col-md-3 my-2">
-                    <div class="card" style="width: 19.27vw;">
+                    <div class="card">
                         <img class="card-img-top pt-3 px-3" src="./images/bandy.jpg" alt="Card image cap">
-                        <div class="card-body">
+                        <div class="card-body ">
                             <p class="card-title">Alcohol Shop</p>
                             <h6 class="card-subtitle mb-2 text-muted">Praça Seca, Rio de Janeiro</h6>
                             <span href="#" class="card-link ratting py-1 px-1"><img src="./icons/star-outline.svg" alt="" class="star-ico"><span class="ratting_count px-1">4</span></span>
@@ -195,21 +195,7 @@
                 </div>
 
                 <div class="col-12 col-md-3 my-2">
-                    <div class="card" style="width: 19.27vw;">
-                        <img class="card-img-top pt-3 px-3" src="./images/bandy.jpg" alt="Card image cap">
-                        <div class="card-body">
-                            <p class="card-title">Alcohol Shop</p>
-                            <h6 class="card-subtitle mb-2 text-muted">Praça Seca, Rio de Janeiro</h6>
-                            <span href="#" class="card-link ratting py-1 px-1"><img src="./icons/star-outline.svg" alt="" class="star-ico"><span class="ratting_count px-1">4</span></span>
-                            <span href="#" class="card-link km-req">2.75 km</span>
-                            <span href="#" class="card-link ">Min Order: $500</span>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="col-12 col-md-3 my-2">
-                    <div class="card" style="width: 19.27vw;">
+                    <div class="card">
                         <img class="card-img-top pt-3 px-3" src="./images/bandy.jpg" alt="Card image cap">
                         <div class="card-body">
                             <p class="card-title">Alcohol Shop</p>
@@ -223,7 +209,21 @@
 
 
                 <div class="col-12 col-md-3 my-2">
-                    <div class="card" style="width: 19.27vw;">
+                    <div class="card">
+                        <img class="card-img-top pt-3 px-3" src="./images/bandy.jpg" alt="Card image cap">
+                        <div class="card-body">
+                            <p class="card-title">Alcohol Shop</p>
+                            <h6 class="card-subtitle mb-2 text-muted">Praça Seca, Rio de Janeiro</h6>
+                            <span href="#" class="card-link ratting py-1 px-1"><img src="./icons/star-outline.svg" alt="" class="star-ico"><span class="ratting_count px-1">4</span></span>
+                            <span href="#" class="card-link km-req">2.75 km</span>
+                            <span href="#" class="card-link ">Min Order: $500</span>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-12 col-md-3 my-2">
+                    <div class="card">
                         <img class="card-img-top pt-3 px-3" src="./images/bandy.jpg" alt="Card image cap">
                         <div class="card-body">
                             <p class="card-title">Alcohol Shop</p>
@@ -294,13 +294,13 @@
                     <h2 class="my-4">Popular Stores</h2>
                 </div>
                 <div class="col-auto">
-                    <button type="button" class="btn btn-light view__more__btn">View More</button>
+                    <button type="button" class="btn btn-light view_more_btn">View More</button>
                 </div>
             </div>
 
             <div class="row justify-content-center ">
                 <div class="col-12 col-md-3 my-2">
-                    <div class="card" style="width: 19.27vw;">
+                    <div class="card">
                         <img class="card-img-top pt-3 px-3" src="./images/bandy.jpg" alt="Card image cap">
                         <div class="card-body">
                             <p class="card-title">Alcohol Shop</p>
@@ -313,21 +313,7 @@
                 </div>
 
                 <div class="col-12 col-md-3 my-2">
-                    <div class="card" style="width: 19.27vw;">
-                        <img class="card-img-top pt-3 px-3" src="./images/bandy.jpg" alt="Card image cap">
-                        <div class="card-body">
-                            <p class="card-title">Alcohol Shop</p>
-                            <h6 class="card-subtitle mb-2 text-muted">Praça Seca, Rio de Janeiro</h6>
-                            <span href="#" class="card-link ratting py-1 px-1"><img src="./icons/star-outline.svg" alt="" class="star-ico"><span class="ratting_count px-1">4</span></span>
-                            <span href="#" class="card-link km-req">2.75 km</span>
-                            <span href="#" class="card-link ">Min Order: $500</span>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="col-12 col-md-3 my-2">
-                    <div class="card" style="width: 19.27vw;">
+                    <div class="card">
                         <img class="card-img-top pt-3 px-3" src="./images/bandy.jpg" alt="Card image cap">
                         <div class="card-body">
                             <p class="card-title">Alcohol Shop</p>
@@ -341,7 +327,21 @@
 
 
                 <div class="col-12 col-md-3 my-2">
-                    <div class="card" style="width: 19.27vw;">
+                    <div class="card">
+                        <img class="card-img-top pt-3 px-3" src="./images/bandy.jpg" alt="Card image cap">
+                        <div class="card-body">
+                            <p class="card-title">Alcohol Shop</p>
+                            <h6 class="card-subtitle mb-2 text-muted">Praça Seca, Rio de Janeiro</h6>
+                            <span href="#" class="card-link ratting py-1 px-1"><img src="./icons/star-outline.svg" alt="" class="star-ico"><span class="ratting_count px-1">4</span></span>
+                            <span href="#" class="card-link km-req">2.75 km</span>
+                            <span href="#" class="card-link ">Min Order: $500</span>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-12 col-md-3 my-2">
+                    <div class="card">
                         <img class="card-img-top pt-3 px-3" src="./images/bandy.jpg" alt="Card image cap">
                         <div class="card-body">
                             <p class="card-title">Alcohol Shop</p>
@@ -412,13 +412,13 @@
                     <h2 class="my-4">Recommended For You</h2>
                 </div>
                 <div class="col-auto">
-                    <button type="button" class="btn btn-light view__more__btn">View More</button>
+                    <button type="button" class="btn btn-light view_more_btn">View More</button>
                 </div>
             </div>
 
             <div class="row justify-content-center ">
                 <div class="col-12 col-md-3 my-2">
-                    <div class="card" style="width: 19.27vw;">
+                    <div class="card">
                         <img class="card-img-top pt-3 px-3" src="./images/bandy.jpg" alt="Card image cap">
                         <div class="card-body">
                             <p class="card-title">Alcohol Shop</p>
@@ -431,21 +431,7 @@
                 </div>
 
                 <div class="col-12 col-md-3 my-2">
-                    <div class="card" style="width: 19.27vw;">
-                        <img class="card-img-top pt-3 px-3" src="./images/bandy.jpg" alt="Card image cap">
-                        <div class="card-body">
-                            <p class="card-title">Alcohol Shop</p>
-                            <h6 class="card-subtitle mb-2 text-muted">Praça Seca, Rio de Janeiro</h6>
-                            <span href="#" class="card-link ratting py-1 px-1"><img src="./icons/star-outline.svg" alt="" class="star-ico"><span class="ratting_count px-1">4</span></span>
-                            <span href="#" class="card-link km-req">2.75 km</span>
-                            <span href="#" class="card-link ">Min Order: $500</span>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="col-12 col-md-3 my-2">
-                    <div class="card" style="width: 19.27vw;">
+                    <div class="card">
                         <img class="card-img-top pt-3 px-3" src="./images/bandy.jpg" alt="Card image cap">
                         <div class="card-body">
                             <p class="card-title">Alcohol Shop</p>
@@ -459,7 +445,21 @@
 
 
                 <div class="col-12 col-md-3 my-2">
-                    <div class="card" style="width: 19.27vw;">
+                    <div class="card">
+                        <img class="card-img-top pt-3 px-3" src="./images/bandy.jpg" alt="Card image cap">
+                        <div class="card-body">
+                            <p class="card-title">Alcohol Shop</p>
+                            <h6 class="card-subtitle mb-2 text-muted">Praça Seca, Rio de Janeiro</h6>
+                            <span href="#" class="card-link ratting py-1 px-1"><img src="./icons/star-outline.svg" alt="" class="star-ico"><span class="ratting_count px-1">4</span></span>
+                            <span href="#" class="card-link km-req">2.75 km</span>
+                            <span href="#" class="card-link ">Min Order: $500</span>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-12 col-md-3 my-2">
+                    <div class="card">
                         <img class="card-img-top pt-3 px-3" src="./images/bandy.jpg" alt="Card image cap">
                         <div class="card-body">
                             <p class="card-title">Alcohol Shop</p>
@@ -803,10 +803,14 @@
                     <h5>Follow Us</h5>
                     <ul class="list-unstyled">
                         <li class="my-2 d-flex justify-content-around">
-                            <a href="#"><img src="./images/Group 50462.svg" alt="" class="mr-2"><img src="./icons/Liquor Website assets/facebook.svg" alt=""></a>
-                            <a href="#"><img src="./images/Group 50463.svg" alt=""><img src="./icons/Liquor Website assets/twitter.svg" alt=""></a>
-                        </li>
+                            <img src="./icons/Liquor Website assets/facebook.svg" alt="" class="mr-2">
 
+
+
+                        </li>
+                        <li><img src="./icons/Liquor Website assets/twitter.svg" alt=""></li>
+                        <li><img src="./icons/Liquor Website assets/" alt=""></li>
+                        <li><img src="" alt=""></li>
                     </ul>
                 </div>
             </div>
