--- a/index.html
+++ b/index.html
@@ -757,7 +757,7 @@
     </div>
 
 
-    <footer class="page-footer ">
+    <footer class="page-footer bg-light">
         <div class="container">
             <div class="row ">
                 <div class="col-md-2 mx-auto my-4 ">
