--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
 
+
+
+    <!--  -->
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+    <!--  -->
     <!-- Primary Meta Tags -->
     <!-- Primary Meta Tags -->
     <title>Roadyo</title>
@@ -99,6 +109,7 @@
     <div class="col-12">
 
         <!-- ---------------category--------------------- -->
+
         <div class="container my-3">
             <div>
                 <h2>Categories</h2>
@@ -757,7 +768,7 @@
     </div>
 
 
-    <footer class="page-footer bg-light">
+    <footer class="page-footer ">
         <div class="container">
             <div class="row ">
                 <div class="col-md-2 mx-auto my-4 ">
@@ -827,11 +838,7 @@
 
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-    <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
 </body>
 
 </html>
