--- a/index.html
+++ b/index.html
@@ -768,7 +768,7 @@
     </div>
 
 
-    <footer class="page-footer ">
+    <footer class="page-footer w-100 ">
         <div class="container">
             <div class="row ">
                 <div class="col-md-2 mx-auto my-4 ">
