--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <div>
                 <h2>Categories</h2>
             </div>
-            <div class="row category__section justify-content-between flex-nowrap">
+            <div class="row category__section justify-content-between flex-nowrap overflow-auto">
                 <div class="col-auto">
                     <div class="image flex-column align-item-center">
                         <img src="./images/download.jpeg" alt=" " class="cat_img mb-3">
@@ -768,7 +768,7 @@
     </div>
 
 
-    <footer class="page-footer w-100 ">
+    <footer class="page-footer w-100">
         <div class="container">
             <div class="row ">
                 <div class="col-md-2 mx-auto my-4 ">
