--- a/index.html
+++ b/index.html
@@ -133,6 +133,14 @@
 
                 <div class="col-auto">
                     <div class="image flex-column align-item-center">
+                        <img src="./images/wine_images.jpeg" alt=" " class="cat_img mb-3">
+                        <p class="text-center">Bear</p>
+                    </div>
+                </div>
+
+
+                <div class="col-auto">
+                    <div class="image flex-column align-item-center">
                         <img src="./images/download.jpeg" alt=" " class="cat_img mb-3">
                         <p class="text-center">Bear</p>
                     </div>
