--- a/index.html
+++ b/index.html
@@ -823,13 +823,10 @@
                     <ul class="list-unstyled">
                         <li class="my-2 d-flex justify-content-around">
                             <img src="./icons/Liquor Website assets/facebook.svg" alt="" class="mr-2">
-
-
-
                         </li>
                         <li><img src="./icons/Liquor Website assets/twitter.svg" alt=""></li>
-                        <li><img src="./icons/Liquor Website assets/" alt=""></li>
-                        <li><img src="" alt=""></li>
+                        <li><img src="./icons/Liquor Website assets/linkedin.svg" alt=""></li>
+                        <li><img src="./icons/Liquor Website assets/instagram.svg" alt=""></li>
                     </ul>
                 </div>
             </div>
