--- a/index.html
+++ b/index.html
@@ -820,8 +820,8 @@
 
                 <div class="col-md-2 mx-auto my-4">
                     <h5>Follow Us</h5>
-                    <ul class="list-unstyled">
-                        <li class="my-2 d-flex justify-content-around">
+                    <ul class="list-unstyled d-flex justify-content-around">
+                        <li class="my-2 ">
                             <img src="./icons/Liquor Website assets/facebook.svg" alt="" class="mr-2">
                         </li>
                         <li><img src="./icons/Liquor Website assets/twitter.svg" alt=""></li>
